Fixed bug #52015 (Allow including end date in DatePeriod iterations)